--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -2,16 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="utif-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Homepage</title>
-  <link rel="stylesheet" href="../reset.css" type="text/css" />
-  <link rel="stylesheet" href="../header.css" type="text/css" />
-  <link rel="stylesheet" href="../footer.css" type="text/css" />
-  <link rel="stylesheet" href="home.css" type="text/css" />
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Health+</title>
+    <link rel="stylesheet" href="../reset.css" type="text/css" />
+    <link rel="stylesheet" href="../header.css" type="text/css" />
+    <link rel="stylesheet" href="../footer.css" type="text/css" />
+    <link rel="stylesheet" href="home.css" type="text/css" />
+    <script src="home.js"></script>
 </head>
 <body>
-    <p>Welcome to homepage!</p>
+    <header>
+        <div class="wrapper">
+                <img src="../assets/FDMlogo.png" alt="FDM logo" height="30">
+            <div class="header-text">
+                <h1><a href="../homepage/home.html">Health+</a></h1>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="../Track/trackermainpage.html">Track</a></li>
+                        <li><a href="../forum/forum.html">Forum</a></li>
+                        <li><a href="../contact/contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <div class="main">
+        <h3>Welcome to Health+</h3>
+    </div>
+    <div class="pageinfo">
+    <div class="track">
+        <p id="trackinfo"></p>
+    </div>
+    <div class="articles">
+    <p>Recommended Articles<br></p>
+    Mental Wellbeing:<br>
+    <a href="https://www.fdmgroup.com/blog/tips-on-looking-after-your-mental-health/">Tips on looking after your mental wellbeing</a><br>
+    <a href="https://www.helpguide.org/articles/mental-health/building-better-mental-health.htm">Building better mental health</a><br>
+    <a href="https://www.nuffieldhealth.com/article/diet-tips-to-combat-stress-and-anxiety">Diet tips to combat stress and anxiety</a><br>
+    Fitness:<br>
+    <a href="https://www.health.harvard.edu/topics/exercise-and-fitness">Exercise and Fitness by Harvard</a><br>
+    <a href="https://www.healthline.com/health/fitness-exercise-eating-healthy">Exercise and Eating Healthy</a>
+    </div>
+</div>
     <footer>
         <nav>
             <ul>
@@ -22,4 +58,5 @@
             </ul>
         </nav>
     </footer>
+<script src="home.js"></script>
 </body>
