--- a/Components/homepage/chat/static/css/chat.css
+++ b/Components/homepage/chat/static/css/chat.css
@@ -1,6 +1,6 @@
 .chat-bar {
     position: fixed;
-    bottom: 0;
+    bottom: 50px;
     right: 50px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
