--- a/Components/homepage/home.html
+++ b/Components/homepage/home.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../header.css" type="text/css" />
     <link rel="stylesheet" href="../footer.css" type="text/css" />
     <link rel="stylesheet" href="home.css" type="text/css" />
+    <link rel="stylesheet" href="chat/static/css/chat.css">
+    <link rel="stylesheet" href="chat/static/css/home.css">
     <script src="home.js"></script>
 </head>
 <body>
@@ -31,25 +33,67 @@
             </div>
         </div>
     </header>
+
     <h2>Welcome to Health+</h2>
-<div class="main">
+    <div class="main">
 
-    <div class="trackers">
-        <p id="trackinfo"></p>
+        <div class="trackers">
+            <p id="trackinfo"></p>
+        </div>
+
+        <div class="articles">
+            <h3>Recommended Articles<br></h3>
+            <br><b>Mental Wellbeing:</b><br>
+            <a href="https://www.fdmgroup.com/blog/tips-on-looking-after-your-mental-health/">Tips on looking after your mental wellbeing</a><br>
+            <a href="https://www.helpguide.org/articles/mental-health/building-better-mental-health.htm">Building better mental health</a><br>
+            <a href="https://www.nuffieldhealth.com/article/diet-tips-to-combat-stress-and-anxiety">Diet tips to combat stress and anxiety</a><br>
+            <br><b>Fitness:</b><br>
+            <a href="https://www.health.harvard.edu/topics/exercise-and-fitness">Exercise and Fitness by Harvard</a><br>
+            <a href="https://www.healthline.com/health/fitness-exercise-eating-healthy">Exercise and Eating Healthy</a>
+        </div>
+
     </div>
 
-    <div class="articles">
-        <h3>Recommended Articles<br></h3>
-        <br><b>Mental Wellbeing:</b><br>
-        <a href="https://www.fdmgroup.com/blog/tips-on-looking-after-your-mental-health/">Tips on looking after your mental wellbeing</a><br>
-        <a href="https://www.helpguide.org/articles/mental-health/building-better-mental-health.htm">Building better mental health</a><br>
-        <a href="https://www.nuffieldhealth.com/article/diet-tips-to-combat-stress-and-anxiety">Diet tips to combat stress and anxiety</a><br>
-        <br><b>Fitness:</b><br>
-        <a href="https://www.health.harvard.edu/topics/exercise-and-fitness">Exercise and Fitness by Harvard</a><br>
-        <a href="https://www.healthline.com/health/fitness-exercise-eating-healthy">Exercise and Eating Healthy</a>
-    </div>
+    <!-- Pop-up box -->
+    <div class="chat-bar">
+        <button id="chat-button" type="button" class="collapsible">Chat with us!
+        </button>
+        <div class="content">
+            <div class="full-chat-block">
 
-</div>
+                <!-- Message box -->
+                <div class="outer-container">
+                    <div class="chat-container">
+
+                        <!-- Messages -->
+                        <div id="chatbox">
+                            <h5 id="chat-timestamp"></h5>
+                            <p id="botStarterMessage" class="botText"><span>Loading...</span></p>
+                        </div>
+
+                        <!-- User input box -->
+                        <div class="chat-bar-input-block">
+
+                            <!-- User input--> 
+                            <div id="userInput">
+                                <input id="textInput" class="input-box" type="text" name="msg"
+                                    placeholder="Tap 'Enter' to send a message">
+                                <p></p>
+                            </div>
+
+                            <div class="chat-bar-icons">
+                                <img src="chat/heart.png" alt="like" class="heart" onclick="heartButton()">
+                                <img src="chat/send.png" alt="send" class="submit" onclick="sendButton()">
+                            </div>
+                        </div>
+                        <div id="chat-bar-bottom">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <nav>
@@ -62,6 +106,10 @@
             </ul>
         </nav>
     </footer>
-<script src="home.js"></script>
+    <script src="home.js"></script>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="chat/static/scripts/responses.js"></script>
+<script src="chat/static/scripts/chat.js"></script>
+</html>
 
